fix styling issues on mobile displays

--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ footer {
   }
   h1 {
     margin-top: 5%;
-    font-size: 4rem;
-    letter-spacing: 3.5px;
+    font-size: 1.7rem;
+    letter-spacing: 2px;
     word-spacing: 2px;
   }
   .parent-container {
@@ -95,15 +95,15 @@ footer {
     box-shadow: 2px 4px 16px rgb(229, 15, 147);
   }
   .parent-container > [class^="div-"] {
-    height: 275px;
+    height: 130px;
     width: auto;
-    font-size: 6rem;
-    /* text-shadow: none; */
+    font-size: 3.5rem;
+    text-shadow: none;
     border-radius: 0;
   }
   footer {
-    font-size: 2.2rem;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+    font-size: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
   }
 }
